completed windows support, made command configuration obsolete